@@ -1,3 +1,9 @@
+ukui-session-manager (2.0.8-5) v101; urgency=medium
+
+  * 修改bug：#65789 #65484
+
+ -- liuliang <liuliang@kylinos.cn>  Thu, 08 Jul 2021 17:06:11 +0800
+
 ukui-session-manager (2.0.8-2) v101; urgency=medium
 
   * 性能优化改动
